; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/netinet6/extr_frag6.c_frag6_sched_timeout.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/netinet6/extr_frag6.c_frag6_sched_timeout.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ip6qlock = common dso_local global i32 0, align 4
@LCK_MTX_ASSERT_OWNED = common dso_local global i32 0, align 4
@frag6_timeout_run = common dso_local global i32 0, align 4
@frag6_nfragpackets = common dso_local global i64 0, align 8
@frag6_timeout = common dso_local global i32 0, align 4
@hz = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @frag6_sched_timeout to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @frag6_sched_timeout() #0 {
  %1 = load i32, i32* @LCK_MTX_ASSERT_OWNED, align 4
  %2 = call i32 @LCK_MTX_ASSERT(i32* @ip6qlock, i32 %1)
  %3 = load i32, i32* @frag6_timeout_run, align 4
  %4 = icmp ne i32 %3, 0
  br i1 %4, label %12, label %5

5:                                                ; preds = %0
  %6 = load i64, i64* @frag6_nfragpackets, align 8
  %7 = icmp sgt i64 %6, 0
  br i1 %7, label %8, label %12

8:                                                ; preds = %5
  store i32 1, i32* @frag6_timeout_run, align 4
  %9 = load i32, i32* @frag6_timeout, align 4
  %10 = load i32, i32* @hz, align 4
  %11 = call i32 @timeout(i32 %9, i32* null, i32 %10)
  br label %12

12:                                               ; preds = %8, %5, %0
  ret void
}

declare dso_local i32 @LCK_MTX_ASSERT(i32*, i32) #1

declare dso_local i32 @timeout(i32, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
